Updated CV hobbies

--- a/hobbies.html
+++ b/hobbies.html
@@ -5,21 +5,23 @@
     <title>My hobbies</title>
   </head>
   <body>
-  <p>  <ol>
-      <li>Leg day because im a psychopath (jk)</li>
-      <li>Swimming at the river</li>
-      <li>Playing any sport <ul>
-          <li>
-            (too competative for my own good)</li>
+    <h1>Hobbies</h1>
+  <p>  <ul>
+      <li><strong>Leg day</strong> because im a psychopath (jk)</li></p>
+      <p>
+        <li><a href="Me and jax.png">Swimming in different rivers (Click to see me swimming in a mountain river)</a></li> </p>
+    <p>
+
+   <li>Playing Sports <ul>
+          <li>Ive loved sports my whole life playing football, basketball, track. Competing in <a href="boxing.jpg">Boxing</a>
+             & <a href="MMA.jpg">MMA</a>
+            </li>  </p>
         </ul>
-      <li>Sleeping in <ul>
-          <li>(Ah im human after all)</li>
-        </ul>
-        <li><strong><a href="https://www.instagram.com/p/COeDMHthf-e/">Boxing</strong></a>
-          </li>
-          <li> <strong><a href="https://www.instagram.com/p/CMKzreqhLfE/">Martial arts</a></strong></li>
-    </ol>
-</p>
+
+    <p>
+
+   <li> <a href="Climbing mountains.jpg">Climbing challenging mountains</a> <ul>
+          <li>One of my major goals in life is to climb MT.Everest</li>   </p>
 
   </body>
 </html>
