Updated CV for online clients Index,

--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
     <a href="hobbies.html">My Hobbies</a>
     <p>
 
-      <a href="contact.html">Contact me to better your life</a>
+      <a href="Contact.html">How to contact me</a> </p>
+    <p>   <a href="Online training.html"><em>Online clients click here to login</em></a>
 
-    </p>
 
     </p>
 </body>
