Updated CV for Index/Login page

--- a/index.html
+++ b/index.html
@@ -147,7 +147,9 @@
     <p>
 
       <a href="Contact.html">How to contact me</a> </p>
-    <p>   <a href="Online training.html"><em>Online clients click here to login</em></a>
+    <p>   <a href="Online training.html"><em>Click here to login or subscribe to online training/coaching</em></a>
+
+
 
 
     </p>
