--- a/Online training.html
+++ b/Online training.html
@@ -16,9 +16,28 @@
 
 
 <h1><p style="color:teal">Decentralized Fitness online training </h1>
+
+  <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+<input type="hidden" name="cmd" value="_s-xclick">
+<input type="hidden" name="hosted_button_id" value="5B478NWQUMZEL">
+<table>
+<tr><td><input type="hidden" name="on0" value=""></td></tr><tr><td><select name="os0">
+	<option value="Online Coaching/Nutrition">Online Coaching/Nutrition : $60.00 USD - monthly</option>
+</select> </td></tr>
+</table>
+<input type="hidden" name="currency_code" value="USD">
+<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_subscribeCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+</form>
+
 <hr>
 <tbody>
 <script type="text/javascript">var ptd_param = {};ptd_param.apk = "P73RMN7WGZ1407582";</script><script src="https://v3portal.ptdistinction.com/v3/inside/integration/v1/portal-min.js"></script><div id="ptd_portal"></div>
+
+
+
+
+
 
 </tbody>
 
