Update on CV index, signup, login

--- a/index.html
+++ b/index.html
@@ -147,7 +147,11 @@
     <p>
 
       <a href="Contact.html">How to contact me</a> </p>
-    <p>   <a href="Online training.html"><em>Click here to login or subscribe to online training/coaching</em></a>
+    <p>   <a href="Online training.html"><em>Log into your online training account here</em></a> <p>
+
+    </p>
+
+      <a href="Login.html"><strong>Sign up for individualized coaching here</strong></a>
 
 
 
