--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     <a href="hobbies.html">My Hobbies</a>
     <p>
 
-      <a href="C:\Users\rudyg\OneDrive\Desktop\Web bootcamp\Web development\HTML- Personal site\contact.html">How to contact me</a> </p>
+      <a href="contact.html">How to contact me</a> </p>
     <p>   <a href="Online training.html"><em>Log into your online training account here</em></a> <p>
 
     </p>
