CV index change with signup and login updated

--- a/index.html
+++ b/index.html
@@ -147,6 +147,11 @@
     <p>
 
       <a href="contact.html">How to contact me</a> </p>
+To <em>Signup</em> for online training click <a href="Signup.html"><strong>HERE</strong></a>
+<p>
+
+
+If you're already a member, <em>login</em> <a href="Login.html"><strong>HERE</strong></a></p>
 
 </body>
 
