Updated CV background color, styling  CSS  ALL

--- a/Signup.html
+++ b/Signup.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Future member setup</title>
+  <link rel="stylesheet" href="C:\Users\Admin\OneDrive\Desktop\Web bootcamp\Web development\css\styles.css">
 </head>
 <body>
 
