--- a/index.html
+++ b/index.html
@@ -4,9 +4,29 @@
 <head>
   <meta charset="utf-8">
   <title>🔥Rudy's personal site🔥</title>
+
+
+<link rel="stylesheet" href="C:\Users\Admin\OneDrive\Desktop\Web bootcamp\Web development\css\styles.css">
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </head>
 
-<body>
+
+
+
+
   <table cellspacing="20">
     <tr>
 
@@ -26,10 +46,10 @@
 
   </table>
 
-  <hr size=2 noshade />
+  <hr>
   </p>
   <p>
-  <h3><em><strong>Background and education</strong></em></h3>
+  <h3><em>Background and education</em></h3>
   <ul>
     <li><strong><a href="https://www.alamo.edu/">Alamo Colleges</a></strong> 2011-2016 <em>Exercise science</em></li>
     <ul>
