--- a/Login.html
+++ b/Login.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Member Login</title>
+  <link rel="stylesheet" href="C:\Users\Admin\OneDrive\Desktop\Web bootcamp\Web development\css\styles.css">
 </head>
 
 <body>
