--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Contacting me</title>
+    <link rel="stylesheet" href="C:\Users\Admin\OneDrive\Desktop\Web bootcamp\Web development\css\styles.css">
   </head>
   <body>
     <h1><em><strong>Contact Me</strong></em></h1>
@@ -24,6 +25,8 @@
         <label for="">Your Message</label><br>
       <textarea name="name" rows="10" cols="30"></textarea> <br>
 <input type="Submit" name="Your Message" value="Submit">
+
+
 
 
 
