UPDATE CSS TO GENERAL FILE AS OTHERS

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>🔥Rudy's personal site🔥</title>
 
 
-<link rel="stylesheet" href="C:\Users\Admin\OneDrive\Desktop\Web bootcamp\Web development\css\styles.css">
+<link rel="stylesheet" href="styles.css">
 
 
 
