--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Contacting me</title>
-    <link rel="stylesheet" href="C:\Users\Admin\OneDrive\Desktop\Web bootcamp\Web development\css\styles.css">
+<link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <h1><em><strong>Contact Me</strong></em></h1>
