--- a/index.html
+++ b/index.html
@@ -3,14 +3,10 @@
 
 <head>
   <meta charset="utf-8">
-  <title>🔥Rudy's personal site🔥</title>
+  <title>Rudy Galan's personal site</title>
 
 
-<link rel="stylesheet" href="styles.css">
-
-
-
-
+  <link rel="stylesheet" href="styles.css">
 
 
 
@@ -23,7 +19,7 @@
 
 </head>
 
-
+<body>
 
 
 
@@ -46,40 +42,54 @@
 
   </table>
 
+
+  <h3><em>About me</em></h3>
+  <p>
+    As a lifelong learner i enjoy learning different subjects. I continue my
+    learning today by engaging in nutrition, exercise, biochemistry, psychology,
+    web design & coding (i built this website from scatch).
+  <p>
+    I use these skills to improve the lives of others via exercise/nutrition
+    plans as well as my knowledge on circadian rhytmes to not only
+    make a person healthier but instill good habits using proven science based
+    methods.</p>
+  My life goal is to experience life without the need for money, and help
+  others attain the same goal. For this a person needs financial freedom, which
+  is one of the main purposes i also study the market, and am a active investor.<br>
+
+  "Seek to teach, as thats how you become a true master at a craft" -Rudy
+  </p>
+
   <hr>
   </p>
   <p>
   <h3><em>Background and education</em></h3>
   <ul>
-    <li><strong><a href="https://www.alamo.edu/">Alamo Colleges</a></strong> 2011-2016 <em>Exercise science</em></li>
+    <li><strong><a class="exp" href="https://www.alamo.edu/">Alamo Colleges</a></strong> 2011-2016 <em>Exercise science</em></li>
     <ul>
-      <li> <em>Here is where the the foundation was built of my real knowledge of nutrtion, & exercise</em></li>
+      <li> <em>Here is where the the foundation was built of my real knowledge of nutriton, & exercise. I say real knowledge because
+          ive actually been training/dieting since early in my life (about 8 years old),<br> so i had to correct my previous knowledge.</em></li>
     </ul>
     <p>
 
-      <li><strong><a href="https://www.txstate.edu/">Texas State University</a></strong> 2018-2021 <em>Biology, Biochemistry, Psychology</em></li>
+      <li><strong><a class="exp" href="https://www.txstate.edu/">Texas State University</a></strong> 2018-2021 <em>Biology, Biochemistry, Psychology</em></li>
     <ul>
-      <li> <em>Texas state university is where my knowledge started to move to the next level. Learning about
-          the body from a biological/biochemical level enabled me to relate it to my exercise science background.
-          Taking classes about psychology, abnormal psychology as well as brain development helped me link everything
+      <li> <em>Texas state university is where my knowledge started to move to the next level. In a sense where
+          i know i can self learn everything. <br> A biological/biochemical outlook enabled me to relate it to my exercise science background. <br>
+          Taking classes about psychology, abnormal psychology as well as brain development helped me link the connections
           together.</em> </li>
     </ul>
     </p>
 
     <p>
-      <li><strong><a href="https://www.acefitness.org/">American Counsil on Exercise</a></strong> 2018-Present <em>Personal trainer, Fitness Nutrition specialist, Functional training specialist, Sports performance specialist</em></li>
+      <li><strong><a class="exp" href="https://www.acefitness.org/">American Counsil on Exercise</a></strong> 2018-Present <em>Exercise & Nutrition expert</em></li>
     <ul>
-      <li><em>Through certification programs from science based certificates i further solidified my knowledge further</em></li>
+      <li><em>Through certification programs of science based certificates i further solidified my knowledge.</em></li>
     </ul>
 
 
-    </p>
-    <p>
-      <li> Growing up in the south side of San Antonio, the majority of my life has been learned by
-        trial and error, and i mean <strong>errors</strong>. From <em> nutrition, sports, exercise, and mental health to stocks, finance, business, and even
-          mentoring from some of the top lowkey gurus of the world.</em>
-        All this has enabled me to be the best version of myself and pass the information on to others. </li>
-    </p>
+
+
 
 
 
@@ -89,21 +99,22 @@
     <h3>Work experience</h3>
     <table cellspacing="10">
 
-    <table>
-      <thead>
-        <tr>
-          <th>Work
+      <table>
+        <thead>
+          <tr>
+            <th>Work
 
-        <th>Date</th> </tr>
+            <th>Date</th>
+          </tr>
 
-      </thead>
+        </thead>
 
-      <tbody>
+        <tbody>
 
-      </tbody>
-      <tfoot>
+        </tbody>
+        <tfoot>
 
-      </tfoot>
+        </tfoot>
 
         <tr>
           <td> Boxing trainee at Luna's Boxing</td>
@@ -111,67 +122,24 @@
         </tr>
         <tr>
           <td>Student of Archer Hybrid MMA & Fitness </td>
-          <td>2018-2021</td>
+          <td>2018-current</td>
         </tr>
         <tr>
           <td>Independent Fitness & Health coach</td>
-          <td>2019-2021</td>
+          <td>2019-current</td>
         </tr>
-    </table>
-    <hr>
-
-    <table cellspacing="10">
-      <h3>Skills</h3>
-      <tr>
-        <td> Web development</td>
-        <td>⭐⭐⭐⭐</td>
-      </tr>
-      <tr>
-
-        <td> Software application</td>
-        <td>⭐⭐</td>
-      </tr>
-      <tr>
-
-        <td> Computer programming</td>
-        <td>⭐⭐⭐</td>
-      </tr>
-
-      <tr>
-
-        <td>
-          Nutrition </td>
-        <td>⭐⭐⭐⭐⭐</td>
-      </tr>
-      <tr>
-
-        <td>Training & coaching</td>
-        <td>⭐⭐⭐⭐⭐</td>
-      </tr>
-      <tr>
-
-        <td> Lifestyle guidance </td>
-        <td>⭐⭐⭐⭐</td>
-      </tr>
-    </table>
-
-
-
-    <hr>
+      </table>
+      <hr>
 
 
 
 
+      <a href="hobbies.html">My Hobbies</a>
+      <p>
 
-    <a href="hobbies.html">My Hobbies</a>
-    <p>
+        <a href="contact.html">How to contact me</a>
+      </p>
 
-      <a href="contact.html">How to contact me</a> </p>
-To <em>Signup</em> for online training click <a href="Signup.html"><strong>HERE</strong></a>
-<p>
-
-
-If you're already a member, <em>login</em> <a href="Login.html"><strong>HERE</strong></a></p>
 
 </body>
 
